# nii-rs

./: Cargo.toml  README.md  pyproject.toml
examples/: tutorial.py  tutorial.rs
python/: test.py
python/niirs/: __init__.py
src/: bind.rs  image.rs  lib.rs  utils.rs
